CSS fix for feed on mobile

--- a/api/public/js/blather/src/pages/css/index.css
+++ b/api/public/js/blather/src/pages/css/index.css
@@ -303,7 +303,7 @@ a {
       overflow-x: hidden;
       word-break: break-word; }
       .feedPage .grid .feedRow .tweet {
-        max-width: 300px; } }
+        max-width: 290px; } }
 
 .feedPage .mostFallacious .feedEvent .meta {
   margin-top: 0 !important; }
